--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description         : >-                               # >- means to ignore newl
 url                 : "https://24nl12.github.io"
 repository          : 24nl12 
 
-email: nl12@williams.edu
+email: nawonlee8@gmail.com
 github_user: 24nl12
 instagram: _nawon
 linkedin: NawonLee
